--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <input type="text" placeholder="Ingrese dirección" class="peticion_direccion input">
             <div class="control_peticion_footer">
-                <a onclick="envio_whatsapp(event)">Enviar</a>
+                <a onclick="envio_whatsapp()">Enviar</a>
                 <a onclick="desaparecer_control()">Cancelar</a>
             </div>
         </div>
