--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 generado por JavaScript.
                 Confirme su envío.<br><span class="letra_rojo">Direccion: Calle América frente al Alfarero #
                     115</span></p>
-            <input type="date" class="date input">
+            <input type="text" class="date input">
             <div class="peticion_domicilio">
                 <input type="checkbox" class="peticion_checkbox input" onclick="mostrar_direccion(event)">
                 <p>Seleccionar para domicilio + $250.00</p>
